# BusFight

./: .clang-format  CMakeLists.txt  README.md  component.h  componentsdock.cpp  componentsdock.h  entities.cpp  entities.h  fieldsdialog.cpp  fieldsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  sectiondialog.cpp  sectiondialog.h  sectionwidget.cpp  sectionwidget.h
.github/workflows/: compilation.yml  release.yml
